--- a/app/assets/stylesheets/welcome.scss.erb
+++ b/app/assets/stylesheets/welcome.scss.erb
@@ -122,6 +122,7 @@ a:hover {
 	text-align: center;
 	vertical-align: middle;
 	float: right;
+	border-radius: 2px;
 }
 
 @media screen and (max-width: 770px) {
@@ -132,6 +133,7 @@ a:hover {
 	background-color: rgba(255,255,255,.8);
 	text-align: center;
 	vertical-align: middle;
+	border-radius: 2px;
 	}
 	.input-wrapper {
 		padding: 0 15px;
