--- a/app/assets/stylesheets/welcome.scss.erb
+++ b/app/assets/stylesheets/welcome.scss.erb
@@ -115,14 +115,15 @@ a:hover {
 }
 
 #contact_box {
-	width: 550px;
+	width: 60%;
 	// max-width: 50%;
 	height: auto;
 	background-color: rgba(255,255,255,.8);
 	text-align: center;
 	vertical-align: middle;
-	float: right;
+	// float: right;
 	border-radius: 2px;
+	margin: 0 auto;
 }
 
 @media screen and (max-width: 770px) {
@@ -142,7 +143,8 @@ a:hover {
 
 #contact-content {
 	vertical-align: middle;
-	padding-top: 20px;
+	padding-top: 50px;
+	padding-bottom: 30px;
 }
 
 .input-wrapper {
