--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -4,7 +4,7 @@
 		</p>
 	<% end %>
 <div class="window" id="nyc_jumbo">
-	<div class="container-fluid">
+	<!-- <div class="container-fluid"> -->
 		<div id="contact_box">
 			<div id="contact-content">
 				<h2 class="pg_title">Contact Me</h2>
@@ -14,7 +14,7 @@
 				<p>
 					<%= link_to image_tag('my_tw2.png') + " @megandtiu", "http://twitter.com/megandtiu" %>
 				</p>
-				<div class="input-wrapper form-group">
+				<!-- <div class="input-wrapper form-group">
 					 <%= form_tag(create_contact_path) do %>
 						<div class="form-group">
 					  	<%= text_field_tag :name, nil, placeholder: "Name", class: "form-control" %>
@@ -29,9 +29,10 @@
 					  	<%= submit_tag "Send", class: "form-control btn-default" %>
 					  </div>
 					<% end %>
-				</div>
+				</div> -->
+				<br />
 			</div>
 		</div>
-	</div>
+	<!-- </div> -->
 </div>
 </body>
