--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,16 +17,16 @@
 		<div class="header">
 			<h1 id="head">MEGAN TIU</h1>
 			<div class="row">
-				<div class="col-xs-4 col-md-4">
+				<div class="col-xs-3 col-md-3">
 					<%= link_to "home", root_path %>
 				</div>
-				<div class="col-xs-4 col-md-4">
+				<div class="col-xs-3 col-md-3">
 					<%= link_to "about", about_path %>
 				</div>
-				<!-- <div class="col-xs-3 col-md-3">
-					<a href="blog.html">blog</a>
-				</div> -->
-				<div class="col-xs-4 col-md-4">
+				<div class="col-xs-3 col-md-3">
+					<%= link_to "blog", blog_path %>
+				</div>
+				<div class="col-xs-3 col-md-3">
 					<%= link_to "contact", contact_path %>
 				</div>
 			</div>
