--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -7,7 +7,7 @@
 
 			<div class="col-xs-12 col-sm-6 col-md-6" id="about">
 				<h2 class="pg_title">About Me</h2>
-				<p>I'm a Rails-focused web developer currently studying in Tech Talent South's Code Immersion Program. I'm interested in learning as much as possible about programming and am looking for a full-time development position as well as ways I can serve the community with my skills. I graduated magna cum laude from Georgia State University in May 2015 with a B.A. in Film and Television. When I'm not glued to my computer, I love tabletop and video gaming, tearing through Atlanta's streets by bike, and playing with my pit bull.</p>
+				<p>I'm a full-stack web developer currently coding for <a href="http://www.fittery.com">Fittery</a>. I most recently graduated from Tech Talent South's Code Immersion program and I'm now actively searching for opportunities to serve the community with my skills. I graduated magna cum laude from Georgia State University in May 2015 with a B.A. in Film and Television. When I'm not glued to my computer, I love tabletop and video gaming, tearing through Atlanta's streets by bike, and playing with my pit bull.</p>
 			</div>
 		</div>
 	</div>
