--- a/app/assets/stylesheets/blog.scss
+++ b/app/assets/stylesheets/blog.scss
@@ -8,3 +8,10 @@
   font-size: 12px;
   padding: 10px;
 }
+
+@media screen and (max-width: 770px) {
+  .body {
+  padding-left: 0px;
+  padding-right: 0px;
+  }
+}
