--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -2,3 +2,9 @@
  *= require_tree .
  *= require_self
  */
+
+ @media screen and (max-width: 770px) {
+   .col-xs-3 {
+    font-size: 20px;
+   }
+ }
