Post #2, added global meta description

--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -1,5 +1,17 @@
 <div class="window">
   <div class="container-fluid">
+
+    <div class="row">
+      <div class="col-xs-12 col-sm-12 col-md-12 blogstream">
+        <h2 class="pg_title" id="">On the Importance of Side Projects</h2>
+        <div id="post">
+          <p id="date_stamp">October 25, 2015</p>
+          <p class="body">Today, I got to spend time with a group of awesome, inspiring women in the Atlanta tech scene away from work, away from meetups, and away from any rigid structure. Bringing us together was the goal of completing burgeoning or neglected side projects, often sidetracked as work and life get in the way. As we sat quietly coding, sipping coffee, and munching on pastries, a light flickered on in my head: <strong>I truly love what I do.</strong></p>
+          <p class="body"><a href="/blog/2">Read more...</a></p>
+        </div>
+      </div>
+    </div>
+
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 blogstream">
         <h2 class="pg_title" id="">5 Most Meaningful Lessons I Learned from Coding Bootcamp</h2>
@@ -13,5 +25,6 @@
         </div>
       </div>
     </div>
+
   </div>
 </div>
