--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -2,12 +2,12 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-md-6 test-class">
-				<%= image_tag "IMG_7102.jpg", class: "img-responsive img-circle me_pic" %>
+				<%= image_tag "me.jpg", class: "img-responsive img-circle me_pic" %>
 			</div>
 
 			<div class="col-xs-12 col-sm-6 col-md-6" id="about">
 				<h2 class="pg_title">About Me</h2>
-				<p>I'm a full-stack web developer currently coding for <a href="http://www.fittery.com">Fittery</a>. I most recently graduated from Tech Talent South's Code Immersion program and I'm now actively searching for opportunities to serve the community with my skills. I graduated magna cum laude from Georgia State University in May 2015 with a B.A. in Film and Television. When I'm not glued to my computer, I love tabletop and video gaming, tearing through Atlanta's streets by bike, and playing with my pit bull.</p>
+				<p>I'm a full-stack web developer currently working for <a href="http://www.fittery.com">Fittery</a>. I most recently graduated from Tech Talent South's Code Immersion program and I'm now actively searching for opportunities to serve the community with my skills. I graduated magna cum laude from Georgia State University in May 2015 with a B.A. in Film and Television. When I'm not glued to my computer, I love tabletop and video gaming, tearing through Atlanta's streets by bike, and playing with my pit bull.</p>
 			</div>
 		</div>
 	</div>
