--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -1,14 +1,11 @@
-<div class="window">
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-xs-12 col-sm-6 col-md-6 test-class">
-				<%= image_tag "me.jpg", class: "img-responsive img-circle me_pic" %>
-			</div>
+<%=  render partial: "header.html.erb" %>
 
-			<div class="col-xs-12 col-sm-6 col-md-6" id="about">
-				<h2 class="pg_title">About Me</h2>
-				<p>I'm a full-stack web developer currently working for <a href="http://www.fittery.com">Fittery</a>. I most recently graduated from Tech Talent South's Code Immersion program and I'm now actively searching for opportunities to serve the community with my skills. I graduated magna cum laude from Georgia State University in May 2015 with a B.A. in Film and Television. When I'm not glued to my computer, I love tabletop and video gaming, tearing through Atlanta's streets by bike, and playing with my pit bull.</p>
-			</div>
-		</div>
-	</div>
+<div class="content about">
+	<p>
+		I'm a full-stack web developer specializing in Rails and am currently working for <a href="http://www.fittery.com">Fittery</a>, where I wear many hats on a small, fast-paced development team. I love writing clean code, optimizing efficiency, working with big data, and architecting APIs. I'm also passionate about diversity in tech and building a positive, accessible community for all. I genuinely love the work I do and am excited to grow my computing knowledge in as many ways as possible.
+	</p>
+
+	<p>
+		I graduated magna cum laude from Georgia State University with a BA in Film and Television and I also completed the Tech Talent South Code Immersion Program. When I'm not glued to my computer, I love tabletop and video gaming, tearing through Atlanta's streets by bike, and playing with <a href="https://www.instagram.com/p/1jWocBx4nk/">my pit bull</a>.
+	</p>
 </div>
