--- a/app/assets/stylesheets/blog.scss
+++ b/app/assets/stylesheets/blog.scss
@@ -1,7 +1,22 @@
+.post {
+  font-family: 'Source Sans Pro', sans-serif;
+  text-align: center;
+  padding: 0 70px;
+}
+
+.title {
+  font-family: 'Playfair Display', serif;
+  text-decoration: none;
+  color: #000;
+}
+
 .body {
   text-align: left;
-  padding-left: 150px;
-  padding-right: 150px;
+  padding: 0 100px;
+}
+
+.date-stamp {
+  font-weight: bold;
 }
 
 .small-note {
@@ -9,9 +24,16 @@
   padding: 10px;
 }
 
+@media screen and (max-width: 991px) {
+  .post {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+}
+
 @media screen and (max-width: 770px) {
   .body {
-  padding-left: 0px;
-  padding-right: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
   }
 }
