--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,55 +10,26 @@
   
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+
   <link href='https://fonts.googleapis.com/css?family=Patua+One' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Playfair+Display:700,900' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600' rel='stylesheet' type='text/css'>
   <%= csrf_meta_tags %>
 
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <% unless Rails.env.development? %>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-69281454-1', 'auto');
-    ga('send', 'pageview');
-  </script>
+      ga('create', 'UA-69281454-1', 'auto');
+      ga('send', 'pageview');
+    </script>
+  <% end %>
 </head>
 
 <body>
-	<!-- Header -->
-	<div class="container-fluid">
-		<div class="header">
-			<h1 id="head">MEGAN TIU</h1>
-			<div class="row">
-				<div class="col-xs-3 col-md-3">
-					<%= link_to "home", root_path %>
-				</div>
-				<div class="col-xs-3 col-md-3">
-					<%= link_to "about", about_path %>
-				</div>
-				<div class="col-xs-3 col-md-3">
-					<%= link_to "blog", blog_path %>
-				</div>
-				<div class="col-xs-3 col-md-3">
-					<%= link_to "contact", contact_path %>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- /Header -->
-
-<%= yield %>
-
-<!-- Footer -->
-	<div class="container">
-		<div class="footer">
-			<%= link_to image_tag('my_tw2.png'), "http://twitter.com/megandtiu" %>
-			<%= link_to image_tag("32px.png"), "http://github.com/megantiu" %>
-			<%= link_to image_tag("my_li2.png"), "http://linkedin.com/in/megantiu" %>
-			<%= link_to image_tag("email.png"), "mailto:megan@megantiu.com" %>
-		</div>
-	</div>
-<!-- /Footer -->
-
+  <%= yield %>
 </body>
 </html>
