--- a/app/views/static/_header.html.erb
+++ b/app/views/static/_header.html.erb
@@ -1,5 +1,4 @@
-<div class="container home">
-
+<div class="partial">
   <div class="photo">
     <a href="/">
       <%= image_tag "me.jpg", class: "img-responsive img-circle me-pic" %>
@@ -14,15 +13,10 @@
     <%= link_to image_tag("email.png"), "mailto:megan@megantiu.com" %>
   </div>
 
-  <div class="description">
-    <p>I'm a full-stack web developer in Atlanta, GA currently working for <a href="http://www.fittery.com">Fittery</a>.</p>
-  </div>
-
   <div class="links">
     <%= link_to "blog", blog_path, class: "link" %>
     <%= link_to "about", about_path, class: "link" %>
     <%= link_to "contact", contact_path, class: "link" %>
     <%= link_to "now", now_path, class: "link" %>
   </div>
-
 </div>
