--- a/app/views/static/contact.html.erb
+++ b/app/views/static/contact.html.erb
@@ -1,14 +1,9 @@
-<div class="window" id="nyc_jumbo">
-	<div id="contact_box">
-		<div id="contact-content">
-			<h2 class="pg_title">Contact Me</h2>
-			<p>
-				<%= link_to image_tag("email.png") + " megan@megantiu.com", "mailto:megan@megantiu.com" %>
-			</p>
-			<p>
-				<%= link_to image_tag('my_tw2.png') + " @megandtiu", "http://twitter.com/megandtiu" %>
-			</p>
-			<br />
-		</div>
-	</div>
+<%=  render partial: "header.html.erb" %>
+
+<div class="content contact">
+  <p>I'm a full-stack web developer in Atlanta, GA currently working for <a href="http://www.fittery.com">Fittery</a>.</p>
+  <p>You can send me an email 
+  	<a href="mailto:megan@megantiu.com">here.</a> Or you could tweet at me 
+  	<a href="http://twitter.com/megandtiu">here.</a>
+  </p>
 </div>
