--- a/app/views/static/now.html.erb
+++ b/app/views/static/now.html.erb
@@ -5,7 +5,7 @@
   <ul>
     <li>I'm half of the two-person development team at 
       <a href="http://fittery.com">Fittery</a>,
-      where I'm learning constantly learning new things, growing, and getting my paws on as much fun stuff as possible.
+      where I'm constantly learning new things, growing, and getting my paws on as much fun stuff as possible.
     </li>
 
     <li>I'm on the board of directors for 
