--- a/app/views/static/_header.html.erb
+++ b/app/views/static/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="partial">
   <div class="photo">
     <a href="/">
-      <%= image_tag "me.jpg", class: "img-responsive img-circle me-pic" %>
+      <%= image_tag "me.jpg", class: "img-responsive img-circle me-pic", alt: "Megan Tiu" %>
     </a>
   </div>
   <h1 class="name">Megan Tiu</h1>
