--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -2,7 +2,7 @@
 
   <div class="photo">
     <a href="/">
-      <%= image_tag "me.jpg", class: "img-responsive img-circle me-pic" %>
+      <%= image_tag "me.jpg", class: "img-responsive img-circle me-pic", alt: "Megan Tiu" %>
     </a>
   </div>
   <h1 class="name">Megan Tiu</h1>
