--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -9,7 +9,11 @@
 
 .container.home {
   text-align: center;
-  margin-top: 50px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
 
   .name {
     font-size: 54px;
