Adding extra margin to the bottom of blog pages

--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -1,6 +1,21 @@
 <%=  render partial: "static/header.html.erb" %>
 
-<div class="window">
+<div class="window blog">
+
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 blogstream">
+      <a href="/blog/3/blog-buddies">
+        <h2 class="title" id="">#BlogBuddies</h2>
+      </a>
+      <div class="post">
+        <p class="date-stamp">May 15, 2016</p>
+        <p class="body">Learning is fun. But when you learn a lot at once, it's hard to keep track of all the things you learn in a given time.</p>
+
+        <p class="body">I've had this blog for a while now, yet at a whopping count of two posts, I clearly haven't been utilizing it properly. Thanks to some inspiration by some friends and our book club, this changes now!</p>
+        <p class="body"><a href="/blog/3/blog-buddies">Read more...</a></p>
+      </div>
+    </div>
+  </div>
 
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 blogstream">
