--- a/app/views/blog/post_two.html.erb
+++ b/app/views/blog/post_two.html.erb
@@ -1,6 +1,6 @@
 <%=  render partial: "static/header.html.erb" %>
 
-<div class="window">
+<div class="window blog">
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 blogstream">
       <h2 class="title" id="">On the Importance of Side Projects</h2>
