--- a/app/views/static/about.html.haml
+++ b/app/views/static/about.html.haml
@@ -1,4 +1,4 @@
-= render partial: "header.html.erb"
+= render partial: "header.html.haml"
 .content.about
   %p
     I'm a full-stack web developer specializing in Rails and am currently working for
