--- a/app/views/static/contact.html.haml
+++ b/app/views/static/contact.html.haml
@@ -1,4 +1,4 @@
-= render partial: "header.html.erb"
+= render partial: "header.html.haml"
 .content.contact
   %p
     I'm a full-stack web developer in Atlanta, GA currently working for
