--- a/app/views/blog/index.html.haml
+++ b/app/views/blog/index.html.haml
@@ -1,4 +1,4 @@
-= render partial: "static/header.html.erb"
+= render partial: "static/header.html.haml"
 .window.blog
   .row
     .col-xs-12.col-sm-12.col-md-12.blogstream
