Fixing some major content oopses

--- a/app/views/blog/post_two.html.haml
+++ b/app/views/blog/post_two.html.haml
@@ -10,8 +10,8 @@
           %strong I truly love what I do.
         %p.body
           I've just reached the six week mark in my first full-time development position with
-          = succeed "." do
-            %a{:href => "http://fittery.com"} Fittery
-          = succeed "," do
-            %a{:href => "http://mainmarket.co"} MainMarket
+          %a{:href => "http://fittery.com"} Fittery.
+          So far, every day has been a new, fun challenge, and I learn more with each passing moment than I ever thought possible. As fun as it is, certain needs simply can't be met by a day job. Working for a startup means that every issue or feature I work on is crucial to the business' success; my time is prioritized based on what our founders determine to be most important for the company. Further, on the side, I work on
+          %a{:href => "http://mainmarket.co"} MainMarket,
+          an upcoming microfinance crowdfunding platform for small businesses. While great, it's also at its heart a business, so my goals in development are those of the company's.
         %p.body As I sat this afternoon editing and adding to my existing apps from school, I couldn't help but become a bit giddy. Finally, for the first time in almost two months, my work wasn't constrained to any deadline or limited by business priorities. I was coding purely for fun and my own personal fulfillment. There's something truly refreshing about this kind of work; today, I got to dive further into AJAX, something about which I've been particulary eager to learn more. At work, I don't usually have time to stretch my legs and experiment with every facet of our product. Next month, I'll start an 8-week Javascript class, and I'm so excited to continue learning in a structured, continuous way that lets me explore another language and multiple new frameworks. After today, I understand that side projects truly are a gateway to learning any new technology that strikes my fancy. As a budding developer, I'm realizing just how crucial it is to step away from work to exercise my skills and stimulate parts of my mind that I might not get on a day-to-day basis. To learn is to grow, and I can't get enough.
