--- a/app/views/static/contact.html.haml
+++ b/app/views/static/contact.html.haml
@@ -2,8 +2,7 @@
 .content.contact
   %p
     I'm a full-stack web developer in Atlanta, GA currently working for
-    = succeed "." do
-      %a{:href => "http://www.fittery.com"} Fittery
+    %a{:href => "http://www.fittery.com"} Fittery.
   %p
     You can send me an email
     %a{:href => "mailto:megan@megantiu.com"} here.
