--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -11,8 +11,7 @@
   .description
     %p
       I'm a full-stack web developer in Atlanta, GA currently working for
-      = succeed "." do
-        %a{:href => "http://www.fittery.com"} Fittery
+      %a{:href => "http://www.fittery.com"} Fittery.
   .links
     = link_to "about", about_path, class: "link"
     = link_to "contact", contact_path, class: "link"
