--- a/app/views/static/now.html.haml
+++ b/app/views/static/now.html.haml
@@ -3,19 +3,18 @@
   %p#now Here's what I'm up to now:
   %ul
     %li
-      I'm half of the two-person development team at
-      = succeed "," do
-        %a{:href => "http://fittery.com"} Fittery
+      I'm running solo at
+      %a{:href => "http://fittery.com"} Fittery,
+      where I'm writing and maintaining multiple projects including Rails apps, Ruby gems, and JS apps and libraries. I'm learning and growing rapidly and it's so genuinely exhilarating.
     %li
       I'm on the board of directors for
-      = succeed "," do
-        %a{:href => "http://railsgirlsatl.github.io"} Rails Girls Atlanta
+      %a{:href => "http://railsgirlsatl.github.io"} Rails Girls Atlanta,
+      where I serve as Communications Coordinator and get the joy of talking with and writing for inspiring, exciting women that love code.
     %li
       I've founded and am the co-organizer for Ladies of Tech Talent South, a women's group with the TTS bootcamp that acknowledges how difficult it is for women to enter tech and aims to provide a safe space for socializing, studying, and supporting each other.
     %li
-      I'm in an awesome book club for junior developers where we're currently reading Hoover and Oshineye's
-      = succeed "." do
-        %a{:href => "http://chimera.labs.oreilly.com/books/1234000001813/index.html"} Apprenticeship Patterns: Guidance for the Aspiring Software Craftsman
+      I'm in an awesome book club for growing developers where we're currently reading Hoover and Oshineye's
+      %a{:href => "http://chimera.labs.oreilly.com/books/1234000001813/index.html"} Apprenticeship Patterns: Guidance for the Aspiring Software Craftsman.
     %li
       I get to snuggle and play with
       %a{:href => "https://www.instagram.com/p/1jWocBx4nk/"} this amazing beast
