Inline code styling is blue instead of red; much better

--- a/app/assets/stylesheets/blog.scss
+++ b/app/assets/stylesheets/blog.scss
@@ -21,6 +21,11 @@
     font-size: 24px;
   }
 
+  h3 {
+    text-align: left;
+    font-size: 22px;
+  }
+
   img {
     height: 60%;
     width: 60%;
@@ -33,6 +38,11 @@
     text-align: left;
     border: 0;
     border-radius: 0;
+  }
+
+  code {
+    color: #23527C;
+    background-color: #E8FAFF;
   }
 
   ul {
