--- a/app/views/blog/index.html.haml
+++ b/app/views/blog/index.html.haml
@@ -2,6 +2,16 @@
 .window.blog
   .row
     .col-xs-12.col-sm-12.col-md-12.blogstream
+      %a{:href => "blog/6/adventures-of-a-one-woman-development-team"}
+        %h2.title Adventures of a One-Woman Development Team
+        %p.date-stamp June 5, 2016
+      .post
+        %p.body At time of writing, I've been studying and practicing web development for roughly a year. In that time, I've gone from nervous, questioning, and anxious about my future to firmly planted in a career I love. In June of last year, I introduced myself to modern HTML & CSS (the skills I learned as a 10-year-old weren't going to cut it in a professional setting). In July, I started writing Ruby. I went through a web dev bootcamp. I learned to use Rails, Javascript, git. I learned to work on a team, debug my code, and explore the vast world of programming. In September, I started my first full-time development job.
+        %p.body Nine months later, I'm my company's technical lead. I'm also the most junior person there. I'm also the only developer, period. A team of one.
+        %p.body
+          %a{:href => "blog/6/adventures-of-a-one-woman-development-team"} Read more...
+  .row
+    .col-xs-12.col-sm-12.col-md-12.blogstream
       %a{:href => "blog/5/rubys-enumerable-module-and-you"}
         %h2.title Ruby's Enumerable Module and You
         %p.date-stamp May 29, 2016
@@ -20,7 +30,7 @@
           method. Arrays? Yup. Hashes? You bet. You can even use it in your own custom classes. Discovering this module was a big level-up for me–all of a sudden, I could accomplish more in fewer lines of code. I could read my data-concerned code easier. I could lift a horse with my newfound power! (Okay, that last one's probably not true. But still, the Enumerable module is pretty great.)
         %p.body Here are a few of my favorite ways to use the Enumerable module:
         %p.body
-          %a{:href => "blog/4/getting-and-setting-cookies-in-javascript"} Read more... 
+          %a{:href => "blog/5/rubys-enumerable-module-and-you"} Read more...
   .row
     .col-xs-12.col-sm-12.col-md-12.blogstream
       %a{:href => "blog/4/getting-and-setting-cookies-in-javascript"}
@@ -37,7 +47,7 @@
         %p.body 
           Until I started work on one of our company's new Javascript-based projects, I had never really thought about, much less used, cookies. I'd always assumed (mostly out of ignorance), that cookies would be difficult to use effectively. This week, I was very happy to be proved wrong.
         %p.body
-          %a{:href => "blog/4/getting-and-setting-cookies-in-javascript"} Read more...  
+          %a{:href => "blog/4/getting-and-setting-cookies-in-javascript"} Read more...
   .row
     .col-xs-12.col-sm-12.col-md-12.blogstream
       %a{:href => "/blog/3/blog-buddies"}
