--- a/app/views/blog/post_five.html.haml
+++ b/app/views/blog/post_five.html.haml
@@ -4,6 +4,7 @@
     .col-xs-12.col-sm-12.col-md-12.blogstream
       %h1.title Ruby's Enumerable Module and You
       .post
+        %p.date-stamp May 29, 2016
         %p.body
           When was the last time you explored
           = succeed "?" do
