--- a/app/views/blog/index.html.haml
+++ b/app/views/blog/index.html.haml
@@ -2,6 +2,15 @@
 .window.blog
   .row
     .col-xs-12.col-sm-12.col-md-12.blogstream
+      %a{:href => "blog/7/the-ins-and-outs-of-put-and-patch"}
+        %h2.title The Ins and Outs of PUT and PATCH
+        %p.date-stamp June 12, 2016
+      .post
+        %p.body The world of HTTP is vast! GET and POST are by far the most popular type of requests, but they'll only get you so far. Until recently, the only instances I'd ever really needed to use methods other than GET and POST were server-side while consuming others' APIs; this never proved to be an issue. Lately, however, I've been making more API requests from my own client-side apps, which has brought along some unique challenges. What if you need to update a resource? Meet PUT and PATCH.
+        %p.body
+          %a{:href => "blog/7/the-ins-and-outs-of-put-and-patch"} Read more...
+  .row
+    .col-xs-12.col-sm-12.col-md-12.blogstream
       %a{:href => "blog/6/adventures-of-a-one-woman-development-team"}
         %h2.title Adventures of a One-Woman Development Team
         %p.date-stamp June 5, 2016
