--- a/app/views/blog/index.html.haml
+++ b/app/views/blog/index.html.haml
@@ -2,6 +2,24 @@
 .window.blog
   .row
     .col-xs-12.col-sm-12.col-md-12.blogstream
+      %a{:href => "blog/8/upgrading-rails-doesnt-have-to-be-painful"}
+        %h2.title Upgrading Rails Doesn't Have to Be Painful
+        %p.date-stamp June 19, 2016
+      .post
+        %p.body
+          Rails 5 is nearly here! But you're dreading the upgrade process. Fear no more, friend: this guide has you covered. This year, I was fortunate enough to attend RailsConf in Kansas City, including the
+          %a{:href => "https://speakerdeck.com/derekprior/keep-rails-upgraded"} Keep Rails Upgraded
+          workshop by
+          %a{:href => "https://github/derekprior"} Derek Prior,
+          %a{:href => "https://github.com/calebthompson"} Caleb Thompson,
+          and
+          %a{:href => "https://github.com/schneems"} Richard Schneeman.
+          As someone relatively new to Rails, they swiftly took me from never having upgraded Rails versions to feeling totally comfortable updating my apps in production.
+        %p.body Depending on the size of your app, this isn't intended to be a particularly short process. You'll be reading gem changelogs, wrestling with deprecation warnings, and waiting patiently for your Rubygems dependencies to resolve. But it's really not as hard as it seems!
+        %p.body
+          %a{:href => "blog/8/upgrading-rails-doesnt-have-to-be-painful"} Read more...
+  .row
+    .col-xs-12.col-sm-12.col-md-12.blogstream
       %a{:href => "blog/7/the-ins-and-outs-of-put-and-patch"}
         %h2.title The Ins and Outs of PUT and PATCH
         %p.date-stamp June 12, 2016
