Switching contact link in 8th post to a relative link

--- a/app/views/blog/post_eight.html.haml
+++ b/app/views/blog/post_eight.html.haml
@@ -163,5 +163,5 @@
         %p.body
           Don't you feel better now? And so accomplished! If you've got any questions, please feel free to
           = succeed "." do
-            %a{:href => "http://megantiu.com/contact"} contact me
+            %a{:href => "/contact"} contact me
           Happy upgrading!
