Publishing post nine: Apprenticeship Patterns

--- a/app/views/blog/index.html.haml
+++ b/app/views/blog/index.html.haml
@@ -2,6 +2,18 @@
 .window.blog
   .row
     .col-xs-12.col-sm-12.col-md-12.blogstream
+      %a{:href => "blog/9/apprenticeship-patterns-lessons-learned"}
+        %h2.title Apprenticeship Patterns: Lessons Learned
+        %p.date-stamp June 26, 2016
+      .post
+        %p.body
+          For the past six months, I've been part of a book club of developing developers reading Apprenticeship Patterns by Dave Hoover and Adewale Oshineye. We took a leisurely pace to truly understand and appreciate all the different lessons this book provides and I'm so glad we did. The book is structured in patterns: reusable solutions to common problems in one's career. While the Record What You Learn and Share What You Learn patterns have been massively influential for me in an immediate and concrete way (
+          %a{:href => "/blog/3/blog-buddies"}> they're why I started this blog
+          ), I've found more useful advice in some of the book's overall themes.
+        %p.body
+          %a{:href => "blog/9/apprenticeship-patterns-lessons-learned"} Read more...
+  .row
+    .col-xs-12.col-sm-12.col-md-12.blogstream
       %a{:href => "blog/8/upgrading-rails-doesnt-have-to-be-painful"}
         %h2.title Upgrading Rails Doesn't Have to Be Painful
         %p.date-stamp June 19, 2016
@@ -69,9 +81,9 @@
           %a{href: "http://locrawfish.github.io/"} my buddy Loren!
           My goal for this series,
           %a{href: "/blog/3/blog-buddies"} (as outlined here),
-          is to share what I'm learning on a weekly basis with others--be it lessons in teamwork, new workflow techniques, or fun little hacks--and to have a record of my progress. This week, 
+          is to share what I'm learning on a weekly basis with others--be it lessons in teamwork, new workflow techniques, or fun little hacks--and to have a record of my progress. This week,
           %span.heavier I worked with cookies for the first time.
-        %p.body 
+        %p.body
           Until I started work on one of our company's new Javascript-based projects, I had never really thought about, much less used, cookies. I'd always assumed (mostly out of ignorance), that cookies would be difficult to use effectively. This week, I was very happy to be proved wrong.
         %p.body
           %a{:href => "blog/4/getting-and-setting-cookies-in-javascript"} Read more...
